2005-09-26  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	*  src/jtag2usb.cc: fix the libusb handling, so it will
	eventually also work with libusb-win32.

2005-08-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: set ucPCMaskHigh to 0 for ATmega329x/649x.

2005-08-17  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: add the ATmega329x/649x family.

2005-08-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: add check for libusb.
	* src/Makefile.am: add jtag2usb.cc.
	* src/jtag.h: add USB stuff to jtag class.
	* src/jtag2io.cc (jtag2::~jtag2()): do not prematurely return,
	use an "if" statement instead.
	* src/jtaggeneric.cc: add USB hooks (depending on configuration).
	* src/jtag2usb.cc: New file: implement USB communication.
	* doc/avarice.1: Document the USB connection method.

2005-08-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag2rw.cc (jtag2::jtagRead()): when word-aligning flash
	ROM requests, do also align the request base, and return the
	correct byte(s).

2005-06-20  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/devdescr.cc: add device flags.
	* src/jtag.h: add device flags, move mkI breakpoints out to jtag1.h.
	* src/jtag1.h: mkI breakpoint interface goes here.
	* src/jtag2.h: new mkII breakpoint interface.
	* src/jtag2bp.cc: ditto.
	* src/jtag2run.cc: ditto.
	* src/jtag2rw.cc: Attempt to get the "load" command working.
	* src/jtagbp.cc: remove stale "e" packet code (step-over-range-packet).
	* src/jtagrun.cc: ditto.
	* src/remote.cc: ditto.
	* scripts/gdb-avarice-script: ditto.

2005-05-31  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* src/jtag.h: remove friend restoreSerialPort() which doesn't
	exist at all.

2005-05-27  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Merge the JTAG ICE mkII branch back to HEAD.
	* src/jtag2.h: (new file)
	* src/jtag2_defs.h: (new file)
	* src/jtag2bp.cc: (new file)
	* src/jtag2io.cc: (new file)
	* src/jtag2misc.cc: (new file)
	* src/jtag2prog.cc: (new file)
	* src/jtag2run.cc: (new file)